# Better_Scope

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  run_app.bat  run_app.ps1
better_scope/: __init__.py  config.py  core.py  logger.py  utils.py  version.py
better_scope/gui/: __init__.py  app.py  capture_tab.py  channels_tab.py  config_tab.py  help_about_tab.py  plot_tab.py  scope_tab.py  trigger_tab.py  worker.py
better_scope/instruments/: __init__.py  discovery.py  drivers.py
resources/: Better_Scope_Help.md
tests/: __init__.py  test_backend.py
